# open-science

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  PROJECT_BASIS.md  README.md  dev-bitter-lesson.md  index.html  med_subscribe.mhtml  mkdocs-ainrf.yml  package-lock.json  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  deploy-docs.yml  perf-check.yml
.rules/: deployment.md  frontend-and-testing.md  git-workflow.md  multi-tenant-permissions.md  staging-environment.md  worktree-working-guide.md
auth/: index.html
cli/: index.html
deploy/: .env.example  Dockerfile  ainrf.service  configure-production.sh.template  deploy.sh  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.observability.yml  docker-compose.staging.yml  docker-compose.yml  index.html  nginx-docker.conf  nginx.conf  openscience-domain-worker.service  redeploy-backend.sh  redeploy-frontend.sh  start-production.sh.template
deploy/config/: CLAUDE.md  ainrf-sudoers  claude-settings.json  codex-auth.json  codex-config.toml  entrypoint.py  nginx-bridge.conf  nginx-host.conf  nginx-staging.conf  prometheus-host.yml  prometheus-staging.yml  prometheus.yml
deploy/examples/: Caddyfile.example  ainrf.env.example  prometheus-rules.example.yml
deploy/k8s/: deploy.sh  deployment.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  pvc.yaml  secrets.yaml  (+2 more)
development/: index.html
docs/: cc-goal-stop-hook.md  index.md
docs-site/: astro.config.mjs  package-lock.json  package.json
frontend/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vite.proxy.ts  vitest.config.ts  vitest.perf.config.ts
projects/: index.html
quickstart/: index.html
resources/: index.html
scripts/: build_html_notes.py  ci.sh  deploy-ainrf-docs.sh  dev.py  dev.sh  frontend-dev.sh  install.sh  migrate_tenant_users.py  staging.sh  test.sh  webui.sh
search/: search_index.json
sessions/: index.html
settings/: index.html
terminal/: index.html
tests/: _testutil.py  conftest.py  domain_cutover_fixtures.py  test_agentic_researcher.py  test_api_auth.py  test_api_code.py  test_api_domain_frontend_contract.py  test_api_domain_overview.py  test_api_domain_resource_adapters.py  test_api_domain_runtime_access.py  test_api_domain_v2.py  test_api_environments.py  test_api_health.py  test_api_legacy_domain_audit.py  test_api_literature.py  test_api_maintenance_startup_read_only.py  test_api_project_context.py  test_api_resources.py  test_api_session_v2_projection.py  test_api_task_v2_cutover.py  test_api_tasks.py  test_api_terminal.py  test_api_v1_routes.py  test_arxiv_client.py  test_audit_logging.py  test_auth.py  test_backup.py  test_backup_concurrent.py  test_build_html_notes.py  test_ci_scripts.py  test_cli.py  test_concurrent.py  test_db_connection.py  test_db_migration.py  test_db_session_store.py  test_dev_browser.py  test_dev_stack.py  test_dispatch_wakeup.py  test_domain_cutover_cli.py  test_domain_cutover_controller.py  (+71 more)
timeline/: index.html
webui/: index.html
workspace/: index.html
(+873 files in other folders)
