[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ainrf"
version = "0.1.0"
description = "OpenScience frontend/backend runtime with CLI, API, WebUI, and workspace control surfaces."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "asyncssh>=2.21.1",
  "claude_agent_sdk>=0.1.77",
  "fastapi>=0.116.1",
  "httpx>=0.28.1",
  "pydantic>=2.11.7",
  "structlog>=25.4.0",
  "typer>=0.17.4",
  "uvicorn>=0.35.0",
  "websockets>=15.0.1",
  "pyyaml>=6.0.2",
  "bcrypt>=5.0.0",
  "pyjwt>=2.12.1",
  "arxiv>=4.0.0",
  "apscheduler>=3.11.2",
  "json-repair>=0.59.10",
  "langfuse>=2.0.0",
  "prometheus-client>=0.22.0",
  "opentelemetry-api>=1.30.0",
  "opentelemetry-sdk>=1.30.0",
  "opentelemetry-instrumentation-fastapi>=0.51b0",
  "opentelemetry-instrumentation-sqlite3>=0.51b0",
  "opentelemetry-instrumentation-httpx>=0.51b0",
  "opentelemetry-exporter-otlp-proto-http>=1.30.0",
  "anthropic>=0.109.1",
]

[project.scripts]
ainrf = "ainrf.cli:main"
openscience = "ainrf.cli:main"

[dependency-groups]
dev = [
  "pre-commit>=4.3.0",
  "pytest>=8.4.2",
  "pytest-asyncio>=0.24.0",
  "pytest-benchmark>=5.1",
  "pytest-rerunfailures>=14.0",
  "pytest-timeout>=2.3.1",
  "pytest-xdist>=3.8.0",
  "freezegun>=1.5.0",
  "trio>=0.26.0",
  "ruff>=0.12.11",
  "ty>=0.0.1a19",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ainrf"]

[tool.pytest.ini_options]
addopts = "-q -n auto --timeout=30 --reruns=1 --reruns-delay=0.5"
testpaths = ["tests"]
markers = [
    "api: HTTP API route integration tests",
    "unit: pure unit tests (no HTTP server)",
    "middleware: middleware and security tests",
    "engine: execution engine and SSH tests",
    "cli: CLI and build/deploy script tests",
    "integration: production-like integration tests",
    "slow: tests that take >1s",
    "concurrent: threading/asyncio race and contention tests",
    "db_race: SQLite edge cases and contention tests",
    "json_edge: JSON file persistence edge cases",
    "backup: backup/restore tests",
    "token: token usage aggregation edge cases",
]
filterwarnings = [
    # xdist incompatibility — expected, not actionable
    "ignore:Benchmarks are automatically disabled because xdist plugin is active:pytest_benchmark.logger.PytestBenchmarkWarning",
    # FastAPI testclient uses deprecated starlette httpx path — upstream issue
    "ignore:Using httpx with starlette.testclient is deprecated:DeprecationWarning",
    # pytest-asyncio internals
    "ignore:There is no current event loop:DeprecationWarning",
    # ResourceWarning from xdist worker process cleanup — not real leaks
    "ignore:unclosed database:ResourceWarning",
    "ignore:Enable tracemalloc:ResourceWarning",
    # freezegun may emit warnings on newer Python
    "ignore:datetime.datetime.utcnow:DeprecationWarning",
]
[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.src]
exclude = ["ref-repos"]

[tool.uv]
package = true
